--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,119 @@
-    html, body {
-        width: 100%; 
-        height: 100%;
-    }
+
+/*Обнуление*/
+*{
+	padding: 0;
+	margin: 0;
+	border: 0;
+}
+*,*:before,*:after{
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+}
+:focus,:active{outline: none;}
+a:focus,a:active{outline: none;}
+
+nav,footer,header,aside{display: block;}
+
+html,body{
+	height: 100%;
+	width: 100%;
+	font-size: 100%;
+	line-height: 1;
+	font-size: 14px;
+	-ms-text-size-adjust: 100%;
+	-moz-text-size-adjust: 100%;
+	-webkit-text-size-adjust: 100%;
+}
+input,button,textarea{font-family:inherit;}
+
+input::-ms-clear{display: none;}
+button{cursor: pointer;}
+button::-moz-focus-inner {padding:0;border:0;}
+a, a:visited{text-decoration: none;}
+a:hover{text-decoration: none;}
+ul li{list-style: none;}
+img{vertical-align: top;}
+
+h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
+/*--------------------*/
+
+.block{
+	background: url(../img/ВЗЛЕТКА\ 1.jpg) 0 0 no-repeat;
+	background-size: 1920px 900px;
+
+} 
+.container{
+	width: 100%;
+	height: 100%;
+	max-width: 1625px;
+    margin: 0 auto; 
+
+}
+
+.fontsize72{
+	font-family: 'Montserrat', sans-serif;
+	text-align: center;
+	font-size: 72px;
+	color: rgb(0, 0, 0);
+	opacity: 1;
+	background-color:rgb(255, 255, 255);
+	opacity: 0.7;
+
+}
+
+.fontsize24{
+	font-family: 'Montserrat', sans-serif;
+	text-align: center;
+	font-size: 24px;
+	color: rgb(0, 0, 0);
+	opacity: 1;
+
+
+}
+
+.fontsize36{
+	
+	text-align: center;
+	font-family: 'Montserrat', sans-serif;
+	font-size: 36px;
+	color: rgb(0, 0, 0);
+
+}
+.block2{ 
+	background: url(../img/2022-01-13_19-15-59.png); 
+	height: 300px;
+    width: 1625px;
+    left: -129px;
+    top: -522px;
+    border-radius: 0px;
+	
+
+}
+
+.subsection{
+	display: flex;
+	flex-direction: column;
+	width: 300px;
+}
+
+.footer_sections {
+	
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+}
+
+
+.intro {
+    width: 100%;
+    height: 100vh;
+}
+body {
+    margin: 0;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 18px;
+    line-height: 1.6;
+    color: #000;
+}
